# LocalLLMBenchmark

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: docs-writer.agent.md  evaluation-analyst.agent.md  programmer.agent.md  project-master.agent.md  prompt-analyst.agent.md  reviewer.agent.md  solution-architect.agent.md
.github/instructions/: customization-governance.instructions.md  documentation.instructions.md  progress-tracking.instructions.md  python-benchmark.instructions.md  traceability.instructions.md
.github/prompts/: config-generator.prompt.md  model-recommender.prompt.md
configs/: README.md  comparison.toml  model_candidates.toml  providers.toml  run-alt.toml  run.toml
configs/benchmark_suites/: local-three-tier-baseline-v1.toml  openai-compatible-minimal-v1.toml
configs/model_registry/: local-models-v1.toml  openai-compatible-readiness.toml
configs/prompt_sets/: core-small-model-ja-v1.toml  minimal-readiness-ja-v1.toml
configs/provider_profiles/: local-default.toml  openai-compatible-local.toml
configs/task_profiles/: qa-basic.toml
docs/architecture/: benchmark-foundation.md  prompt-and-config-design.md
docs/design/: 01-architecture.md  02-components.md  (+6 more)
progress/: README.md
scripts/: verify.sh
tests/: __init__.py  test_aggregator.py  test_cli_phase3.py  test_comparator.py  test_compare_integration.py  test_comparison_config.py  test_config.py  test_providers.py  test_reporting.py  test_run_integration.py  test_scoring.py  test_smoke_checklist.py  test_storage.py
(+234 files in other folders)
