[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-benchmark"
version = "0.1.0"
description = "ローカル LLM ベンチマークの最小スキャフォールド"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
local-llm-benchmark = "local_llm_benchmark.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
